# FileeliF

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.txt
resources/: firefox.icns
src/: ProcMgr.cpp  ProcMgr.h  ScrolledWindowWithSizer.cpp  licenseFrame.cpp  licenseFrame.h  logPanel.cpp  logPanel.h  main.cpp  mainFrame.cpp  mainFrame.h  movableFrame.cpp  movableFrame.h  movablePanel.cpp  movablePanel.h  syncPanel.cpp  syncPanel.h  testFrame.cpp  testFrame.h  utils.cpp  utils.h  vstest.cpp  zcImageBtn.cpp  zcImageBtn.h  zcPlayGifControl.cpp  zcPlayGifControl.h  zcRoundRectPanel.cpp  zcRoundRectPanel.h  zcStaticImage.cpp  zcStaticImage.h
